--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Class and ID Selectors</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <style>
+      p.odd-numbers {
+        color: black;
+        font-family: Verdana, "DejaVu Sans", sans-serif;
+        background-color: rgb(245, 159, 159);
+      }
+      p.odd-but-cooler {
+        font-size: 24px;
+      }
+
+      #second-element {
+        font-size: 32px;
+        color: blue;
+      }
+
+      #fourth-element {
+        font-weight: bold;
+        font-size: 24px;
+        background-color: lightgreen;
+      }
+    </style>
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="odd-numbers">Number 1 - I'm a class!</p>
+    <div id="second-element">Number 2 - I'm one ID.</div>
+    <p class="odd-numbers odd-but-cooler">
+      Number 3 - I'm a class, but cooler!
+    </p>
+    <div id="fourth-element">Number 4 - I'm another ID.</div>
+    <p class="odd-numbers">Number 5 - I'm a class!</p>
   </body>
 </html>
